--- a/Backend-ClubLectura/src/main/resources/application.properties
+++ b/Backend-ClubLectura/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=Backend-ClubLectura
+# Configuración de la conexión a una base de datos (MySQL).
+spring.datasource.url=jdbc:mysql://localhost:3306/ejemplobd?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Aasmca44
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Establecer propiedades de JPA e Hibernate para la gestión de persistencia de datos.
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
