--- a/Backend-ClubLectura/src/main/resources/application.properties
+++ b/Backend-ClubLectura/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Backend-ClubLectura
 # Configuración de la conexión a una base de datos (MySQL).
-spring.datasource.url=jdbc:mysql://localhost:3306/ejemplobd?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/clublecturabd?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Aasmca44
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
