--- a/Backend-ClubLectura/src/main/resources/application.properties
+++ b/Backend-ClubLectura/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
